@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-1922] fixed compilation of Zabbix agent under ac AIX 5.1/5.2 (Sasha)
  - [ZBX-1899] fixed sticky starttime in graphs (Aly)
  - [ZBX-1785] fixed starttime in screens, slides on screen/slide switch (Aly)
  - [ZBX-1784] improved displaying big numbers and units in graphs (Aly)
